--- a/hugo.toml
+++ b/hugo.toml
@@ -12,7 +12,7 @@ theme = "smol"
 # Parameters
 [params]
     subtitle = "Electronic DIY Sound Machine"
-    dateFmt = "02.01.2006 15:04"
+    dateFmt = "02.01.2006"
 
 # Header
 [menu]
