Created my own theme from the smol theme. Added LaTeX to the theme. Remove the smol submodule.

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = 'https://kamikazevildsvin.github.io/kromftronics-website-deploy/'
 languageCode = 'en-us'
 title = 'Kromftronics'
-theme = "smol"
+theme = 'kromftronics-theme'
 
 # Privacy settings
 [privacy]
@@ -39,13 +39,3 @@ theme = "smol"
         name = "Github"
         url = "https://github.com/KamikazeVildsvin"
         weight = 1 
-
-    #[[menu.footer]]
-    #    name = "Mastodon"
-    #    url = "https://example.com/@user"
-    #    weight = 2 
-
-    #[[menu.footer]]
-    #    name = "Imprint"
-    #    url = "/imprint"
-    #    weight = 3
