--- a/hugo.toml
+++ b/hugo.toml
@@ -14,6 +14,13 @@ theme = ['kromftronics-theme', 'hugo-snap-gallery']
       subtitle = "Electronic DIY Sound Machine"
       dateFmt = "02.01.2006"
 
+# Table of Contents
+[markup]
+      [markup.tableOfContents]
+            startLevel = 2
+            ordered = true
+            endLevel = 4
+
 # Header
 [menu]
       [[menu.main]]
